@@ -1,4 +1,4 @@
-build.ver=1.3.0
+build.ver=1.3.1
 build.name=bb-ant-tools
 
 build.jar.file=${build.name}.jar
