@@ -1,3 +1,11 @@
+2011-06-06 Josh Kropf <josh@slashdev.ca>
+
+	* NodeIterable.java: filter out all non-element type nodes to fix error
+	  when iterating over alternate entry points extracted from app descriptor
+	* RapcTask.java <setDescriptor>: applied patch from Anders Jacobsson to fix
+	  typo in fetching compiler settings from app descriptor
+
+
 2011-04-15 Josh Kropf <josh@slashdev.ca>
 
     * RapcTask.java (setDescriptor):
@@ -5,7 +13,7 @@
     * BaseJdpType.java (midletClass):
       moved midletClass property from JdpType into base class
     * JdpType.java (writeManifest):
-      rafactored in an attempt to make method more readable
+      refactored in an attempt to make method more readable
 	* TypeAttribute.java (fromAppDescriptor):
 	  new static method for parsing type in app descriptor files
 	* NodeIterable.java: new class for iterating DOM node lists
